[gd_scene load_steps=4 format=3 uid="uid://dmiqspejmxhjy"]

[ext_resource type="StyleBox" uid="uid://d04j7o5w00iqs" path="res://transparent_panel.tres" id="1_7e084"]
[ext_resource type="Script" path="res://panel.gd" id="2_q1ar2"]
[ext_resource type="Script" path="res://BinarySelection.gd" id="3_6v5o7"]

[node name="PanelContainer" type="PanelContainer" node_paths=PackedStringArray("nodes")]
custom_minimum_size = Vector2(400, 200)
anchors_preset = -1
anchor_left = 0.326389
anchor_top = 0.345679
anchor_right = 0.673611
anchor_bottom = 0.654321
offset_left = 180.0
offset_top = 80.0
offset_right = -180.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_7e084")
script = ExtResource("2_q1ar2")
nodes = [NodePath("MarginContainer/VBoxContainer/BigText"), NodePath("MarginContainer/VBoxContainer/LittleText"), NodePath("MarginContainer/VBoxContainer/EnterText"), NodePath("MarginContainer/VBoxContainer/BinarySelection"), NodePath("MarginContainer/VBoxContainer/Confirm"), NodePath("MarginContainer/VBoxContainer/RichText")]
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="BigText" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "(Incorrectly rendered) Message"
horizontal_alignment = 1

[node name="LittleText" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "(Incorrectly rendered) Message"
horizontal_alignment = 1

[node name="EnterText" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = ExtResource("1_7e084")
theme_override_styles/focus = ExtResource("1_7e084")
theme_override_styles/read_only = ExtResource("1_7e084")
placeholder_text = "(incorrectly rendered) input something"
alignment = 1
max_length = 50

[node name="BinarySelection" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1
script = ExtResource("3_6v5o7")

[node name="Option1" type="Button" parent="MarginContainer/VBoxContainer/BinarySelection"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
theme_override_styles/normal = ExtResource("1_7e084")
theme_override_styles/hover = ExtResource("1_7e084")
theme_override_styles/pressed = ExtResource("1_7e084")
theme_override_styles/disabled = ExtResource("1_7e084")
theme_override_styles/focus = ExtResource("1_7e084")
text = "Option 1"

[node name="Option2" type="Button" parent="MarginContainer/VBoxContainer/BinarySelection"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
theme_override_styles/normal = ExtResource("1_7e084")
theme_override_styles/hover = ExtResource("1_7e084")
theme_override_styles/pressed = ExtResource("1_7e084")
theme_override_styles/disabled = ExtResource("1_7e084")
theme_override_styles/focus = ExtResource("1_7e084")
text = "Option 2"

[node name="Confirm" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/normal = ExtResource("1_7e084")
theme_override_styles/hover = ExtResource("1_7e084")
theme_override_styles/pressed = ExtResource("1_7e084")
theme_override_styles/disabled = ExtResource("1_7e084")
theme_override_styles/focus = ExtResource("1_7e084")
text = "OK"

[node name="RichText" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "hello world"
fit_content = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/BinarySelection/Option1" to="MarginContainer/VBoxContainer/BinarySelection" method="_on_option_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BinarySelection/Option2" to="MarginContainer/VBoxContainer/BinarySelection" method="_on_option_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Confirm" to="." method="single_callback"]
